Opened 9 years ago

Closed 9 years ago

#12480 closed bug (fixed)

[Deskbar] Expand new applications doesn't work for Tracker

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev49854

With "Expand new applications" option enabled Deskbar doesn't expand Tracker windows.

Attachments (1)

Patch-12480.patch (1.9 KB ) - added by looncraz 9 years ago.

Download all attachments as: .zip

Change History (3)

by looncraz, 9 years ago

Attachment: Patch-12480.patch added

comment:1 by looncraz, 9 years ago

patch: 01

comment:2 by waddlesplash, 9 years ago

Resolution: fixed
Status: newclosed

Applied in hrev50421. Thanks!

Note: See TracTickets for help on using tickets.