Deskbar: Expand already running applications on startup.

Fixes #12480.

Another way to solve this would be to ensure that TExpandoMenuBar was subscribed
to TBarApp's notifications before TExpandoMenuBar::AttachedToWindow() returns,
but creates other problems that this solution does not have.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>